# lim

./: .env  .gitignore  ASSIGNMENTS_TABLE.sql  CASA_LIM_MENU.sql  COMBOS_EMPLOYEES_SETUP.sql  COMPONENTS.md  DATABASE_SETUP.sql  DATA_AUDIT.md  NGRX_IMPLEMENTATION.md  NGRX_VS_RXJS_DECISION.md  OPTIMIZATIONS.md  OPTIMIZATION_OPPORTUNITIES.md  POSITIONS_TABLE.sql  README.md  REUSABLE_COMPONENTS.md  STATE_MANAGEMENT_ANALYSIS.md  SUPABASE_SETUP_DONE.md  TABLES_SETUP.sql  TAURI_QUICK_START.md  TAURI_SETUP.md  angular.json  package-lock.json  package.json
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/auth/: auth-layout.component.scss  auth-layout.component.ts
src/app/auth/login/: login.component.html  login.component.scss  login.component.ts
src/app/auth/register/: register.component.html  register.component.scss  register.component.ts
src/app/core/components/: supabase-test.component.ts
src/app/core/config/: supabase.config.ts
src/app/core/services/: cart-storage.service.ts  supabase.service.ts
src/app/duena/owner/: owner.component.html  owner.component.scss  owner.component.ts
src/app/layouts/: main-layout.component.ts
src/app/menu/checkout-modal/: checkout-modal.component.html  checkout-modal.component.scss  checkout-modal.component.ts
src/app/orders/: orders.component.html  orders.component.scss  orders.component.ts
src/app/owner/: owner.component.html  owner.component.scss  owner.component.ts
(+188 files in other folders)
