[package]
name = "casalim"
version = "0.1.0"
description = "Casa Lim - Sistema de Gestión de Restaurante"
authors = ["Casa Lim Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
lto = true
